--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!--Font icons for Material UI-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" />
     <title>Tripsy</title>
   </head>
   <body>
@@ -27,6 +28,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBdNltotQBzWAfyhaBbpwi-hOhgE069uc&libraries=places"></script>
   </body>
 </html>
